create job and dynamic job types and payment types also added filter of status on job applications
