# src/swagger.json
@@ -20,9 +20,7 @@
     "/auth/signup": {
       "post": {
         "summary": "Sign up a new user",
-        "tags": [
-          "Auth"
-        ],
+        "tags": ["Auth"],
         "requestBody": {
           "required": true,
           "content": {
@@ -46,9 +44,7 @@
     "/auth/login": {
       "post": {
         "summary": "Log in a user",
-        "tags": [
-          "Auth"
-        ],
+        "tags": ["Auth"],
         "requestBody": {
           "required": true,
           "content": {
@@ -72,9 +68,7 @@
     "/auth/login-with-otp": {
       "post": {
         "summary": "Log in with OTP",
-        "tags": [
-          "Auth"
-        ],
+        "tags": ["Auth"],
         "requestBody": {
           "required": true,
           "content": {
@@ -98,9 +92,7 @@
     "/auth/forgot-password": {
       "post": {
         "summary": "Forgot password",
-        "tags": [
-          "Auth"
-        ],
+        "tags": ["Auth"],
         "requestBody": {
           "required": true,
           "content": {
@@ -124,9 +116,7 @@
     "/jobs/listing": {
       "post": {
         "summary": "Create a job listing",
-        "tags": [
-          "Jobs"
-        ],
+        "tags": ["Jobs"],
         "requestBody": {
           "required": true,
           "content": {
@@ -148,9 +138,7 @@
       },
       "get": {
         "summary": "Get all job listings",
-        "tags": [
-          "Jobs"
-        ],
+        "tags": ["Jobs"],
         "responses": {
           "200": {
             "description": "Job fetched successfully"
@@ -164,9 +152,7 @@
     "/jobs/listing/{id}": {
       "get": {
         "summary": "Get a job listing by ID",
-        "tags": [
-          "Jobs"
-        ],
+        "tags": ["Jobs"],
         "parameters": [
           {
             "name": "id",
@@ -189,9 +175,7 @@
       },
       "patch": {
         "summary": "Update a job listing by ID",
-        "tags": [
-          "Jobs"
-        ],
+        "tags": ["Jobs"],
         "parameters": [
           {
             "name": "id",
@@ -224,9 +208,7 @@
       },
       "delete": {
         "summary": "Delete a job listing by ID",
-        "tags": [
-          "Jobs"
-        ],
+        "tags": ["Jobs"],
         "parameters": [
           {
             "name": "id",
@@ -251,9 +233,7 @@
     "/jobs/apply/{jobId}": {
       "post": {
         "summary": "Apply for a job",
-        "tags": [
-          "Jobs"
-        ],
+        "tags": ["Jobs"],
         "parameters": [
           {
             "name": "jobId",
@@ -276,9 +256,7 @@
             "description": "Job not found"
           }
         },
-        "security": [
-          { "bearerAuth": [] }
-        ]
+        "security": [{ "bearerAuth": [] }]
       }
     },
     "/jobs/apply/{id}": {
@@ -311,11 +289,11 @@
         "summary": "Get all applied Jobs For Job Seeker",
         "tags": ["Jobs"],
         "parameters": [
-      {
-        "name": "page",
-        "in": "query",
-        "required": false,
-        "schema": {
+          {
+            "name": "page",
+            "in": "query",
+            "required": false,
+            "schema": {
               "type": "integer",
               "default": 1,
               "minimum": 1
@@ -344,16 +322,82 @@
         }
       }
     },
+    "/jobs/job-types": {
+      "get": {
+        "summary": "Get all job types available",
+        "tags": ["Jobs"],
+        "responses": {
+          "200": {
+            "description": "Job Types fetched successfully"
+          },
+          "404": {
+            "description": "Job Types not found"
+          }
+        }
+      }
+    },
+    "/jobs/payment-types": {
+      "get": {
+        "summary": "Get all payment types available",
+        "tags": ["Jobs"],
+        "responses": {
+          "200": {
+            "description": "Payment Types fetched successfully"
+          },
+          "404": {
+            "description": "Payment Types not found"
+          }
+        }
+      }
+    },
     "/jobs/job-with-applicants": {
       "get": {
         "summary": "Get all jobs with applicants for Job Provider",
         "tags": ["Jobs"],
         "parameters": [
-      {
-        "name": "page",
-        "in": "query",
-        "required": false,
-        "schema": {
+          {
+            "name": "page",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "integer",
+              "default": 1,
+              "minimum": 1
+            },
+            "description": "Page number (starts from 1)"
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "integer",
+              "default": 10,
+              "minimum": 1
+            },
+            "description": "Number of items per page"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Jobs with applican fetched successfully"
+          },
+          "404": {
+            "description": "Jobs not found"
+          }
+        }
+      }
+    },
+    "/jobs/job-applications": {
+      "get": {
+        "summary": "Get all jobs with applicants details for Job Provider",
+        "tags": ["Jobs"],
+        "parameters": [
+          {
+            "name": "page",
+            "in": "query",
+            "required": false,
+            "schema": {
               "type": "integer",
               "default": 1,
               "minimum": 1
@@ -385,9 +429,7 @@
     "/aws/upload": {
       "post": {
         "summary": "Upload a file to AWS S3",
-        "tags": [
-          "AWS"
-        ],
+        "tags": ["AWS"],
         "requestBody": {
           "required": true,
           "content": {
@@ -417,9 +459,7 @@
     "/aws/file/{key}": {
       "get": {
         "summary": "Get a file from AWS S3",
-        "tags": [
-          "AWS"
-        ],
+        "tags": ["AWS"],
         "parameters": [
           {
             "name": "key",
@@ -444,9 +484,7 @@
     "/ping": {
       "get": {
         "summary": "Ping the server",
-        "tags": [
-          "App"
-        ],
+        "tags": ["App"],
         "responses": {
           "200": {
             "description": "Server is running"
@@ -457,9 +495,7 @@
     "/jobs/listing/shifts": {
       "get": {
         "summary": "Get user job listing shifts data",
-        "tags": [
-          "Jobs"
-        ],
+        "tags": ["Jobs"],
         "responses": {
           "200": {
             "description": "User job listing shifts data fetched successfully"
@@ -468,17 +504,13 @@
             "description": "Internal server error"
           }
         },
-        "security": [
-          { "bearerAuth": [] }
-        ]
+        "security": [{ "bearerAuth": [] }]
       }
     },
     "/auth/login-with-google": {
       "post": {
         "summary": "Log in with Google",
-        "tags": [
-          "Auth"
-        ],
+        "tags": ["Auth"],
         "requestBody": {
           "required": true,
           "content": {
@@ -542,10 +574,7 @@
           },
           "role": {
             "type": "string",
-            "enum": [
-              "job_provider",
-              "job_seeker"
-            ],
+            "enum": ["job_provider", "job_seeker"],
             "example": "job_seeker"
           }
         }
@@ -561,15 +590,9 @@
             "type": "string",
             "example": "password123"
           },
-          "role":{"type": "string",
-            "enum": [
-              "job_provider",
-              "job_seeker"
-            ],
-            "example": "job_seeker"
-          },
           "role": {
             "type": "string",
+            "enum": ["job_provider", "job_seeker"],
             "example": "job_seeker"
           }
         }
